# smooth_feedback

./: '  .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  asif_8hpp.html  asif_8hpp__incl.map  asif_8hpp__incl.md5  asif_8hpp_source.html  asif__func_8hpp.html  asif__func_8hpp__dep__incl.map  asif__func_8hpp__dep__incl.md5  asif__func_8hpp__incl.map  asif__func_8hpp__incl.md5  asif__func_8hpp_source.html  classes.html  classsmooth_1_1feedback_1_1ASIFilter-members.html  classsmooth_1_1feedback_1_1ASIFilter.html  classsmooth_1_1feedback_1_1EKF-members.html  classsmooth_1_1feedback_1_1EKF.html  classsmooth_1_1feedback_1_1IpoptNLP-members.html  classsmooth_1_1feedback_1_1IpoptNLP.html  classsmooth_1_1feedback_1_1IpoptNLP__inherit__graph.map  classsmooth_1_1feedback_1_1IpoptNLP__inherit__graph.md5  classsmooth_1_1feedback_1_1MPC-members.html  classsmooth_1_1feedback_1_1MPC.html  classsmooth_1_1feedback_1_1Mesh-members.html  classsmooth_1_1feedback_1_1Mesh.html  classsmooth_1_1feedback_1_1PID-members.html  classsmooth_1_1feedback_1_1PID.html  classsmooth_1_1feedback_1_1QPSolver-members.html  classsmooth_1_1feedback_1_1QPSolver.html  classsmooth_1_1feedback_1_1detail_1_1LDLTLapack-members.html  classsmooth_1_1feedback_1_1detail_1_1LDLTLapack.html  classsmooth_1_1feedback_1_1detail_1_1LDLTSparse-members.html  classsmooth_1_1feedback_1_1detail_1_1LDLTSparse.html  collocation_8hpp_source.html  common_8hpp_source.html  (+350 more)
.github/workflows/: build_and_test.yml
benchmark/: CMakeLists.txt  bench.cpp  bench_types.hpp  osqp-cpp.cpp  osqp-cpp.hpp  osqp_bench.hpp  smooth_bench.hpp
benchmarks/: CMakeLists.txt  bench.cpp  bench_types.hpp  osqp_bench.hpp  smooth_bench.hpp
cmake/: ConfigTemplate.cmake.in  FindLAPACK.cmake
examples/: CMakeLists.txt  asif_doubleintegrator.cpp  colloc_doubleintegrator.cpp  colloc_se2.cpp  common.hpp  mpc_asif_vehicle.cpp  mpc_asif_vehicle.world  mpc_doubleintegrator.cpp  mpc_se2.cpp  ocp_doubleintegrator.hpp  ocp_doubleintegrator_nlp.cpp  ocp_doubleintegrator_qp.cpp  ocp_se2.hpp  ocp_se2_nlp.cpp  ocp_se2_qp.cpp  pid_se2.cpp  snippets.cpp
include/smooth/feedback/: asif.hpp  asif_func.hpp  collocation.hpp  common.hpp  ekf.hpp  mpc.hpp  mpc_func.hpp  nlp.hpp  ocp.hpp  ocp_flatten.hpp  ocp_to_nlp.hpp  ocp_to_qp.hpp  pid.hpp  qp.hpp  qp_solver.hpp  time.hpp  traits.hpp
include/smooth/feedback/collocation/: dyn.hpp  dyn_error.hpp  eval.hpp  eval_reduce.hpp  mesh.hpp  mesh_function.hpp  meshfunction.hpp
include/smooth/feedback/compat/: ipopt.hpp  osqp.hpp  ros.hpp
include/smooth/feedback/internal/: ldlt_lapack.hpp  ldlt_sparse.hpp  ldlt_suitesparse.hpp
include/smooth/feedback/utils/: d2r_exp.hpp  d2r_exp_sparse.hpp  dr_exp_sparse.hpp  sparse.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+61 more)
test/: test_asif.cpp  test_collocation.cpp  test_ekf.cpp  test_ldlt.cpp  test_mpc.cpp  test_ocp.cpp  test_ocp_ipopt.cpp  test_pid.cpp  test_qp.cpp  test_static.cpp  test_utils_sparse.cpp
tests/: CMakeLists.txt  exp.cpp  ocp.hpp  test_asif.cpp  test_collocation.cpp  test_collocation_dyn.cpp  test_collocation_dyn_error.cpp  test_collocation_eval_reduce.cpp  test_collocation_mesh.cpp  test_collocation_mesh_function.cpp  test_ekf.cpp  test_mesh_eval.cpp  test_mpc.cpp  test_ocp.cpp  test_ocp_flatten.cpp  test_ocp_ipopt.cpp  test_ocp_to_nlp.cpp  test_ocp_to_qp.cpp  test_pid.cpp  test_qp.cpp  test_static.cpp  test_utils_d2rexp.cpp  test_utils_d2rexp_sparse.cpp  test_utils_drexp_sparse.cpp  test_utils_sparse.cpp
