<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smooth_feedback</name>
  <version>0.0.1</version>
  <description>Control theory on Lie groups</description>

  <author>Petter Nilsson</author>
  <maintainer email="pettni@umich.edu">Petter Nilsson</maintainer>
  <license>MIT</license>

  <depend>boost</depend>
  <depend>smooth</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
